add product & product_categories
