# app/Http/Controllers/api/v1/AuthApiController.php
@@ -8,6 +8,8 @@ use App\Http\Requests\user\LoginUserRequest;
 use App\Http\Requests\user\RegisterUserRequest;
 use App\Http\Resources\api\UserResource;
 use App\Models\User;
+use Facade\FlareClient\Http\Exceptions\NotFound;
+use Illuminate\Database\Eloquent\ModelNotFoundException;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\App;
 use Illuminate\Support\Facades\Auth;
@@ -145,7 +147,7 @@ class AuthApiController extends Controller
      *  If  request have param ' token_id ' valid and everything is okay, you'll get a 200 OK response.
      *
      *
-     * @response 200 scenario="logout" {"message": "you are logout now"}}
+     * @response 200 scenario="logout" {"message": "you are logout now"}
      * @authenticated
      * @urlParam lang The language. Example: en
      * @bodyParam token_id The id of user token . Example: 20
@@ -169,8 +171,8 @@ class AuthApiController extends Controller
      *  If  request have param ' email ' exist and everything is okay, you'll get a 200 OK response.
      *
      *
-     * @response 200 scenario="logout" {"message": "you are logout now"}}
-     *
+     * @response 200 scenario="logout" { "state": false,"code": "403","error": "لا يوجد مستخدم بهذا البريد الإلكتروني","execution": "0.211 seconds" }
+     * @response 200 scenario="logout" {"message": "you are logout now"}
      * @urlParam lang The language. Example: en
      * @bodyParam email string required The email of user  . Example: Exemple@exemple.com
      *
@@ -181,5 +183,30 @@ class AuthApiController extends Controller
         $phone = User::select('phone')->where('email', $request->email)->first();
         if ($phone) return response()->data($phone);
         return response()->error(HttpCodes::NOT_FOUND, __('There is no user with this email'));
+    }
+
+    /**
+     * set new password
+     *
+     *  If  request have param ' email ' exist and everything is okay, you'll get a 200 OK response.
+     *
+     *
+     * @response 200 scenario="new password" {"state":true,"code":"200","message":"password was changed successfully","execution":"0.349 seconds","data":{"id":36,"token":"36|yAhv3yRnNyhJ9lwaPDA4uqVnc0nsGbeiqfR8jeK4"}}
+     * @response 404 scenario="new password" {"state": false,"code": "404","message": "لا يوجد مستخدم بهذا البريد الإلكتروني","execution": "0.297 seconds"}
+     * @urlParam lang The language. Example: en
+     * @bodyParam email string required The email of user  . Example: Exemple@exemple.com
+     *
+     */
+
+    public function newPassword(Request $request)
+    {
+        $user =   User::where('email', $request->email)->first();
+        if (!$user) return response()->error(HttpCodes::NOT_FOUND, __('There is no user with this email'));
+
+        $user->password =  bcrypt($request->password);
+        $user->save();
+        $token = $user->createToken('app_token');
+
+        return response()->data(['id' => $token->accessToken->id, 'token' => $token->plainTextToken], __('password was changed successfully'));
     }
 }
